2008-05-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (escape_sequence):
	switching to UTF-8 and back to default (ESC % G, ESC % @)

2008-05-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_subprogram):
	set encoding to default_encoding

	* avatarsay.c (process_subprogram, escape_sequence, CSI_sequence):
	support for single byte CSI code

	* avatarsay.c (escape_sequence):
	Extension: CSI ? 56 h  - switch slow-print on (l for off)

2008-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_backspace): 
	fix: just go back, don't clear the character
	(avt_ask): adapted

	* avatarsay.c (init_language_info): handle long language names 
	case-insensitive

	* avtfilechooser.c (MARK, PARENT_DIRECTORY, RESTART, CONTINUE)
	(LONGER, DIRECTORY): new macros
	(get_file): mark longer entries

	* avtfilechooser.c (get_file):
	use avt_auto_margin, remove show_name
	mark directory entries

	* akfavatar.h, avatar.c (avt_auto_margin):
	new function
	(avt_forward, avt_initialize): use/set new variable auto_margin

	* avatarsay.c (check_config_file):
	keyword BACKGROUNDCOLOR
	make keywords case insensitive

2008-03-29  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.15.0 released

	* akfavatar.h (AVT_DEPRECATED, AVT_UNUSED):
	new makro used to mark deprecated or unused stuff (gcc only)

	* avatarsay.c (get_user_home):
	new function
	(run_shell): chdir to home directory before starting the shell

	* avatarsay.c (get_user_shell):
	first search for the environment variable SHELL

	* avtfilechooser.c:
	new file
	avatarsay.c (ask_file): use avtfilechooser

	* avatar.c (avt_initialize):
	balloon height must be at least 10 lines

	* akfavatar.h, avatar.c (avt_button_quit):
	new function

	* akfavatar.h (AKFAVATAR):
	new macro

	* akfavatar.h, avatar.c (avt_normal_text):
	new function

	* akfavatar.h, avatar.c (avt_inverse, avt_get_inverse):
	new functions

	* akfavatar.h, avatar.c (avt_save_position, avt_restore_position):