@@ -1,5 +1,8 @@
 2008-05-18  Andreas K. Foerster  <info@akfoerster.de>
 
+	* avatarsay.c (escape_sequence, CSI_sequence):
+	CAN or SUB cancel the escape sequence
+
 	* avatarsay.c (escape_sequence):
 	switching to UTF-8 and back to default (ESC % G, ESC % @)
 
